--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,7 @@
-gym==0.23.0
+gymnasium==1.1.1
 matplotlib==3.10.1
 numpy==1.26.4
-tensorflow==2.15.0
-tf_agents==0.19.0
-keras==2.15.0
-tensorflow-probability==0.23.0
-tf_keras==2.15.0
 tensorboard===2.15.2
-numba===0.61.2
 yfinance === 0.2.58
 statsmodels === 0.14.4
 fredapi === 0.4.0
